# test-devin

./: README.md
transcriber-backend/: pyproject.toml
transcriber-backend/app/: main.py
transcriber-frontend/: package-lock.json  package.json
transcriber-frontend/src/: App.tsx
